--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "nodemon": "^3.1.4"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   }
 }
